--- a/system_huellitas/views/admin/index.html
+++ b/system_huellitas/views/admin/index.html
@@ -12,7 +12,7 @@
     <!-- Archivo css donde se tiene la paleta de colores-->
     <link type="text/css" rel="stylesheet" href="../../resources/css/global/color_variables.css">
     <!-- Archivo css donde se tienen los estilos de la pantalla index -->
-    <link type="text/css" rel="stylesheet" href="../../resources/css/admin/css.css">
+    <link type="text/css" rel="stylesheet" href="../../resources/css/admin/index.css">
 </head>
 
 <body>
@@ -31,7 +31,7 @@
                     <input type="password" class="form-control" id="passwordInput">
                  </div>
                 <div class="container text-center">
-                    <button type="button" class="btn btn-primary" >Warning</button>
+                    <button type="button" class="btn btn-orange-color" >Warning</button>
                 </div>
             </div>
         </div>
