--- a/system_huellitas/resources/css/admin/index.css
+++ b/system_huellitas/resources/css/admin/index.css
@@ -1,3 +1,10 @@
+:root {
+    --primary-color: rgb(244, 211, 94);
+    --secundary-color: rgb(238, 150, 75);
+    --tertiary-color: rgb(250, 240, 202);
+    --border-color: rgb(249, 87, 56);
+}
+
 body{
     background-color: var(--primary-color)
 }
