--- a/system_huellitas/views/admin/index.html
+++ b/system_huellitas/views/admin/index.html
@@ -15,7 +15,7 @@
     <link type="text/css" rel="stylesheet" href="../../resources/css/admin/index.css">
 </head>
 
-<body>
+<body bg-yellow-color>
     <div class="container">
         <div class="row justify-content-center align-items-center">
             <div class="col-4">
