--- a/system_huellitas/views/admin/index.html
+++ b/system_huellitas/views/admin/index.html
@@ -9,35 +9,50 @@
     <link type="image/png" rel="icon" href="../../resources/img/huellita_logo_without_text.png">
     <!-- Agregamos el framework de boostrap - css -->
     <link type="text/css" rel="stylesheet" href="../../resources/scss/main.css">
-    <!-- Archivo css donde se tiene la paleta de colores-->
-    <link type="text/css" rel="stylesheet" href="../../resources/css/global/color_variables.css">
-    <!-- Archivo css donde se tienen los estilos de la pantalla index -->
+    <!-- Hoja de estilos css -->
     <link type="text/css" rel="stylesheet" href="../../resources/css/admin/index.css">
+    <!-- Iconos de boostrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
 </head>
 
-<body bg-yellow-color>
+<body class="bg-yellow-color">
     <div class="container">
         <div class="row justify-content-center align-items-center">
-            <div class="col-4">
-                <img src="../../resources/img/huellitas_logo.png" width="500px">
+            <div class="col-5">
+                <img src="../../resources/img/huellitas_logo.png" width="600px">
             </div>
             <div class="col-4">
-                <div class="mb-3">
-                    <label for="name" class="form-label">Alias</label>
-                    <input type="text" class="form-control" id="nameInput">
+                <div class="form">
+                    <div class="row">
+                        <div class="col-auto ">
+                            <i class="bi bi-eye-fill" style="font-size: 2rem; color: black;"></i>
+                        </div>
+                        <div class="col">
+                            <div class="mb-4">
+                                <label for="name" class="form-label">Alias</label>
+                                <input type="text" class="form-control bg-skin-color p-2" id="nameInput">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-auto">
+                            <i class="bi bi-lock-fill" style="font-size: 2rem; color: black;"></i>
+                        </div>
+                        <div class="col">
+                            <div class="mb-4">
+                                <label for="password" class="form-label">Contraseña</label>
+                                <input type="password" class="form-control bg-skin-color p-2" id="passwordInput">
+                             </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="mb-3">
-                    <label for="password" class="form-label">Contraseña</label>
-                    <input type="password" class="form-control" id="passwordInput">
-                 </div>
-                <div class="container text-center">
-                    <button type="button" class="btn btn-orange-color" >Warning</button>
+                <div class="container text-center mt-4">
+                    <button type="button" class="btn btn-orange-color text-light p-2">Ingresar</button>
                 </div>
             </div>
         </div>
-
     </div>
-
 
     <!-- Agregamos el framework de boostrap - js -->
     <script type="text/javascript" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
