--- a/system_huellitas/views/admin/menu_admin.html
+++ b/system_huellitas/views/admin/menu_admin.html
@@ -20,6 +20,14 @@
                 aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+            <div class="row">
+                <div class="col-3">
+                    <img src="../../resources/img/png/huellitas_logo.png" width="40">
+                </div>
+                <div class="col">
+                    <a class="navbar-brand" href="../../views/admin/dashboard.html">Huellitas Pet's</a>
+                </div>
+            </div>
             <div class="offcanvas offcanvas-start bg-skin-color" tabindex="-1" id="offcanvasNavbar"
                 aria-labelledby="offcanvasNavbarLabel">
                 <div class="offcanvas-header">
@@ -28,10 +36,6 @@
                     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
                 <div class="offcanvas-body">
-                    <form class="d-flex mt-3" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-                        <button class="btn btn-orange-color text-light" type="submit">Buscar</button>
-                    </form>
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                         <div class="row mt-4">
                             <div class="col-2">
