--- a/system_huellitas/views/admin/index_admin.html
+++ b/system_huellitas/views/admin/index_admin.html
@@ -23,7 +23,7 @@
                 <img src="../../resources/img/png/huellitas_logo.png" width="600px">
             </div>
             <div class="col-4">
-                <div class="form">
+                <div class="form" id="login">
                     <div class="row">
                         <div class="col-auto ">
                             <i class="bi bi-eye-fill" style="font-size: 2rem; color: black;"></i>
@@ -31,7 +31,7 @@
                         <div class="col">
                             <div class="mb-4">
                                 <label for="name" class="form-label">Alias</label>
-                                <input type="text" class="form-control bg-skin-color p-2" id="nameInput">
+                                <input type="text" class="form-control bg-skin-color p-2" id="name">
                             </div>
                         </div>
                     </div>
@@ -42,7 +42,7 @@
                         <div class="col">
                             <div class="mb-4">
                                 <label for="password" class="form-label">Contraseña</label>
-                                <input type="password" class="form-control bg-skin-color p-2" id="passwordInput">
+                                <input type="password" class="form-control bg-skin-color p-2" id="password">
                              </div>
                         </div>
                     </div>
