--- a/system_huellitas/views/admin/cupones.html
+++ b/system_huellitas/views/admin/cupones.html
@@ -2,32 +2,32 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Huellitas Pets - cupones</title>
-    <!-- Agregamos el framework de boostrap - css -->
-    <link type="text/css" rel="stylesheet" href="../../resources/scss/main.css">
-    <!-- Agregamos su archivo css -->
-    <link type="text/css" rel="stylesheet" href="../../resources/css/admin/static_components/menu.css">
-    <!-- Agregamos el css personalizado de esta clase-->
-    <link type="text/css" rel="stylesheet" href="../../resources/css/admin/cupones.css">
-    <!-- Agregamos la libreria de los iconos -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Huellitas Pets - cupones</title>
+  <!-- Agregamos el framework de boostrap - css -->
+  <link type="text/css" rel="stylesheet" href="../../resources/scss/main.css">
+  <!-- Agregamos su archivo css -->
+  <link type="text/css" rel="stylesheet" href="../../resources/css/admin/static_components/menu.css">
+  <!-- Agregamos la libreria de los iconos -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
-    
+
 <body>
   <!-- Insertar nuestro navbar a esta pantalla usando js -->
   <div id="navbar"></div>
   <br><br><br><br><br><br><br>
   <div class="container text-center">
-          <button type="button" class="btn btn-red-color text-white btn-sm float-end" data-bs-toggle="modal" data-bs-target="#agCupon">
-            <i class="bi bi-plus-circle-fill"></i>
-              Agregar cupón
-            </button>
-            <button type="button" class="btn btn-red-color text-white btn-sm float-end" data-bs-toggle="modal" data-bs-target="#actCupon">
-              Editar cupón
-            </button>
-    </div>
+    <button type="button" class="btn btn-red-color text-white btn-sm float-end" data-bs-toggle="modal"
+      data-bs-target="#agCupon">
+      <i class="bi bi-plus-circle-fill"></i>
+      Agregar cupón
+    </button>
+    <button type="button" class="btn btn-red-color text-white btn-sm float-end" data-bs-toggle="modal"
+      data-bs-target="#actCupon">
+      Editar cupón
+    </button>
+  </div>
   <!--Insertamos el ADD de cupones-->
   <!-- Agregamos el framework de boostrap - js -->
   <script type="text/javascript" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
@@ -57,10 +57,11 @@
             <input type="text" class="form-control" placeholder="100%" aria-label="porcentaje">
           </div>
         </div>
-        <br> 
+        <br>
         <div class="form-check form-switch">
           <label class="form-check-label" for="flexSwitchCheckChecked">Cupón habilitado</label>
-          <input class="form-check-input bg-orange-color" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked>
+          <input class="form-check-input bg-orange-color" type="checkbox" role="switch" id="flexSwitchCheckChecked"
+            checked>
         </div>
       </div>
       <div class="container text-center">
@@ -94,10 +95,11 @@
             <input type="text" class="form-control" placeholder="100%" aria-label="porcentaje">
           </div>
         </div>
-        <br> 
+        <br>
         <div class="form-check form-switch">
           <label class="form-check-label" for="flexSwitchCheckChecked">Cupón habilitado</label>
-          <input class="form-check-input bg-orange-color" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked>
+          <input class="form-check-input bg-orange-color" type="checkbox" role="switch" id="flexSwitchCheckChecked"
+            checked>
         </div>
       </div>
       <div class="container text-center">
