cupones 80% diseño, conecte las ventanas y cree un archivo js en admin

--- a/system_huellitas/views/admin/index_admin.html
+++ b/system_huellitas/views/admin/index_admin.html
@@ -48,7 +48,9 @@
                     </div>
                 </div>
                 <div class="container text-center mt-4">
-                    <button type="button" class="btn btn-orange-color text-light p-2">Ingresar</button>
+                    <!--<button type="button" class="btn btn-orange-color text-light p-2" href="dashboard.html">Ingresar</button>
+                    -->
+                    <a id="loginButton" class="btn btn-orange-color text-light p-2" href="#">Ingresar</a>
                 </div>
             </div>
         </div>
@@ -56,6 +58,7 @@
 
     <!-- Agregamos el framework de boostrap - js -->
     <script type="text/javascript" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="../../controllers/admin/loginadmin.js"></script>
 </body>
 
 </html>
