--- a/system_huellitas/views/admin/menu_admin.html
+++ b/system_huellitas/views/admin/menu_admin.html
@@ -43,7 +43,7 @@
                             </div>
                             <div class="col-2">
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="#">Dashboard</a>
+                                    <a class="nav-link active" aria-current="page" href="dashboard.html">Dashboard</a>
                                 </li>
                             </div>
                         </div>
@@ -103,7 +103,7 @@
                             </div>
                             <div class="col-2">
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="#">Marcas</a>
+                                    <a class="nav-link active" aria-current="page" href="scrud_categorias.html">Marcas</a>
                                 </li>
                             </div>
                         </div>
@@ -113,7 +113,7 @@
                             </div>
                             <div class="col-2 mb-3">
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="#">Cupones</a>
+                                    <a class="nav-link active" aria-current="page" href="cupones.html">Cupones</a>
                                 </li>
                             </div>
                         </div>
