--- a/system_huellitas/resources/css/admin/dashboard.css
+++ b/system_huellitas/resources/css/admin/dashboard.css
@@ -3,16 +3,26 @@
 }
 
 .picture{
-    width: 180px;
-    height: 170px;
+    width: 160px;
+    height: 155px;
 }
-
-.profilePicture{
-    width: 100px;
-    height: 100px;
-}
-
 
 .button1{
     width: 40%;
 }
+
+hr{
+    color: rgb(255, 255, 255);
+    border-width: 3px;
+}
+
+.third_col{
+    height: 100px;
+}
+
+.list-group-item {
+    background-color: rgb(238, 150, 75);
+    color: white;
+  }
+
+  
