Algunos cambios de renombre de archivos

--- a/system_huellitas/views/admin/scrud_cupones.html
+++ b/system_huellitas/views/admin/scrud_cupones.html
@@ -9,11 +9,10 @@
   <link type="image/png" rel="icon" href="../../resources/img/huellita_logo_without_text.png">
   <!-- Agregamos el framework de boostrap - css -->
   <link type="text/css" rel="stylesheet" href="../../resources/scss/main.css">
-  <!-- Agregamos su archivo css -->
-  <link type="text/css" rel="stylesheet" href="../../resources/css/admin/static_components/menu.css">
-  <!-- Agregamos su archivo css -->
-  <link type="text/css" rel="stylesheet" href="../../resources/css/admin/dashboard.css">
-  <link type="text/css" rel="stylesheet" href="../../resources/css/admin/SCRUD_categorias_admin.css">
+    <!-- Agregamos el archivo css del menu -->
+    <link type="text/css" rel="stylesheet" href="../../resources/css/admin/static_components/menu.css">
+    <!-- Agregamos su archivo css para el estilo de la tabla -->
+  <link type="text/css" rel="stylesheet" href="../../resources/css/admin/scrud_marcas.css">
   <!-- Agregamos la libreria de los iconos -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
