--- a/system_huellitas/views/admin/scrud_marcas.html
+++ b/system_huellitas/views/admin/scrud_marcas.html
@@ -10,8 +10,8 @@
     <!-- Agregamos el framework de boostrap - css -->
     <link type="text/css" rel="stylesheet" href="../../resources/scss/main.css">
     <!-- Agregamos su archivo css -->
-    <link type="text/css" rel="stylesheet" href="../../resources/css/admin/dashboard.css">
-    <link type="text/css" rel="stylesheet" href="../../resources/css/admin/SCRUD_categorias_admin.css">
+    <link type="text/css" rel="stylesheet" href="../../resources/css/admin/scrud_marcas.css">
+    <!-- Agregamos el archivo css del menu -->
     <link type="text/css" rel="stylesheet" href="../../resources/css/admin/static_components/menu.css">
 
 <body>
