--- a/system_huellitas/views/admin/scrud_cupones.html
+++ b/system_huellitas/views/admin/scrud_cupones.html
@@ -51,8 +51,8 @@
 
     <div class="container p-4 mt-5">
       <table class="table">
-        <thead class="text-center">
-          <tr class="table-warning">
+        <thead class="text-center ">
+          <tr class="table">
             <th scope="col">Nombre del código</th>
             <th scope="col">Fecha registro</th>
             <th scope="col">Porcentaje %</th>
