Permisos iniciado, cupones centre varias cosas, modals casi listos en responsive

--- a/system_huellitas/views/admin/scrud_marcas.html
+++ b/system_huellitas/views/admin/scrud_marcas.html
@@ -48,7 +48,7 @@
         <div class="container p-4 mt-5">
             <table class="table">
                 <thead class="text-center">
-                    <tr class="table-warning">
+                    <tr class="table">
                         <th scope="col">Imagen</th>
                         <th scope="col">Nombre</th>
                         <th scope="col">Acciones</th>
